[package]
name = "dywapitchtrack"
version = "0.2.0"
authors = ["Nico Franke <nico.franke01@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ZerNico/dywapitchtrack-rust"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dependencies]
wasm-bindgen = "0.2.73"
js-sys = "0.3.50"
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1